--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,6 @@ version: '3'
 services:
   web:
     build: .
-    command: sh -c "fastapi dev app.py"
+    command: sh -c "uvicorn app:app --host 0.0.0.0 --port 8001"
     ports:
-      - 8000:8000
+      - 8001:8001
