add docs & instructions | update in docker config

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,8 @@
+fastapi
+llama-index
+llama-index-embeddings-huggingface
+chromadb
+llama-index-vector-stores-chroma
 python-dotenv
-typing
 psycopg2-binary
 SQLAlchemy
-uvicorn
-pydantic
-fastapi[standard]
-chromadb
-llama-index
-llama-index-vector-stores-chroma
-llama-index-core 
-llama-index-readers-file 
-llama-index-embeddings-huggingface
